Atializado HelloTriangle-Sprites com colisão

--- a/HelloTriangle - Sprites/.vscode/tasks.json
+++ b/HelloTriangle - Sprites/.vscode/tasks.json
@@ -18,6 +18,7 @@
                 "${workspaceFolder}/glad.c",  //GLAD
                 "${workspaceFolder}/../Common/src/Shader.cpp", //Common
                 "${workspaceFolder}/Sprite.cpp",
+                "${workspaceFolder}/Timer.cpp",
                 "${workspaceFolder}/../Dependencies/stb_image/stb_image.cpp",
                 "-o",
                 "${fileDirname}\\${fileBasenameNoExtension}.exe",
